# smk-auto-test

./: Cargo.toml  README.md
src/: cli.rs  excel.rs  main.rs  parse_go_map.rs  util.rs
