[package]
name = "smk-auto-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
calamine = "0.34.0"
clap = { version = "4.6.0", features = ["derive"] }
image = "0.25.10"
indicatif = "0.18.4"
nom = "8.0.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
